[package]
name = "forked-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = {version = "2.0.11", features = ["abigen", "ws"]}
revm = { git = "https://github.com/bluealloy/revm.git", features = [
    "serde",
    "std",
    "memory_limit",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_eip3607",
    "optional_gas_refund",
] }
thiserror = "1.0.37"
eyre = "0.6.8"
futures = "0.3.5"
hashbrown = "0.14.0"
tokio = { version = "1", features = ["full"] }


